monitoring/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
spec:
  selector:
    prometheus: prometheus-persistant
  type: ClusterIP
  ports:
    - name: web
      protocol: TCP
      port: 9090
      targetPort: web
